apps/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - image: linuxserver/jackett:latest
          imagePullPolicy: Always
          name: jackett
          resources:
            requests:
              cpu: "10m"
              memory: "200Mi"
          volumeMounts:
            - name: jackett-config
              mountPath: /config
      volumes:
        - name: jackett-config
          persistentVolumeClaim:
            claimName: jackett-config-hostpath
