apps/jackett/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  serviceName: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - image: ghcr.io/linuxserver/jackett:version-v0.17.456
          name: jackett
          livenessProbe:
            httpGet:
              path: /UI/Login
              port: 9117
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "10m"
              memory: "200Mi"
          volumeMounts:
            - name: config
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
