apps/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  ports:
    - port: 9117
  selector:
    app: jackett
