apps/jackett/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jackett
spec:
  tls:
    - hosts:
      - jackett.hubbe.club  
  rules:
    - host: jackett.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: jackett
              servicePort: 9117
